<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UITestViewController">
            <connections>
                <outlet property="imageIV" destination="ECy-px-V07" id="irb-MU-eDK"/>
                <outlet property="loginButton" destination="g0Q-WE-r86" id="jh8-f1-SRM"/>
                <outlet property="loginField" destination="U7x-YZ-K1j" id="TcQ-49-8ju"/>
                <outlet property="registerButton" destination="f8P-00-J9k" id="Ero-1S-2nw"/>
                <outlet property="registerField" destination="8FC-Co-Bm4" id="EyI-ny-9aZ"/>
                <outlet property="showLabel" destination="BBY-FA-gv6" id="thC-1N-RIc"/>
                <outlet property="textView" destination="z60-5J-c7c" id="haG-Zc-Use"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="showLabelContent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BBY-FA-gv6" userLabel="showLabel">
                    <rect key="frame" x="10" y="20" width="300" height="21"/>
                    <accessibility key="accessibilityConfiguration" identifier="showLabelIdentifier"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0Q-WE-r86" userLabel="loginButton">
                    <rect key="frame" x="250" y="48" width="60" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="loginButtonIdentifier"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="60" id="7iu-hp-uCD"/>
                        <constraint firstAttribute="height" constant="30" id="vJG-fg-k4Y"/>
                    </constraints>
                    <state key="normal" title="login">
                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="buttonClicked:" destination="-1" eventType="touchUpInside" id="bm8-pu-9jX"/>
                    </connections>
                </button>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="loginFieldContent" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U7x-YZ-K1j" userLabel="loginField">
                    <rect key="frame" x="10" y="50" width="230" height="30"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="QCv-8b-ltd"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f8P-00-J9k" userLabel="registerButton">
                    <rect key="frame" x="249" y="88" width="62" height="34"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="60" id="2an-2o-5nJ"/>
                        <constraint firstAttribute="height" constant="30" id="RrH-AC-PBX"/>
                    </constraints>
                    <state key="normal" title="register">
                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="buttonClicked:" destination="-1" eventType="touchUpInside" id="tsU-kR-Bpl"/>
                    </connections>
                </button>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="registerFieldContent" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8FC-Co-Bm4" userLabel="registerField">
                    <rect key="frame" x="10" y="90" width="230" height="30"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="kEL-KX-QY2"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="z60-5J-c7c" userLabel="textView">
                    <rect key="frame" x="10" y="360" width="300" height="120"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="120" id="D4H-xw-7Fa"/>
                    </constraints>
                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                </textView>
                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tabbar_home_normal" translatesAutoresizingMaskIntoConstraints="NO" id="ECy-px-V07" userLabel="imageView">
                    <rect key="frame" x="10" y="140" width="300" height="200"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="200" id="cgn-a5-YuH"/>
                    </constraints>
                </imageView>
            </subviews>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
            <constraints>
                <constraint firstItem="ECy-px-V07" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="4ND-5t-slM"/>
                <constraint firstItem="8FC-Co-Bm4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="7t4-Uk-udm"/>
                <constraint firstItem="g0Q-WE-r86" firstAttribute="leading" secondItem="U7x-YZ-K1j" secondAttribute="trailing" constant="10" id="HiK-uI-Nlf"/>
                <constraint firstItem="g0Q-WE-r86" firstAttribute="top" secondItem="BBY-FA-gv6" secondAttribute="bottom" constant="9" id="J9F-Ar-KA4"/>
                <constraint firstItem="g0Q-WE-r86" firstAttribute="leading" secondItem="U7x-YZ-K1j" secondAttribute="trailing" constant="10" id="Jn7-kH-oze"/>
                <constraint firstItem="ECy-px-V07" firstAttribute="top" secondItem="8FC-Co-Bm4" secondAttribute="bottom" constant="20" id="K6m-Iz-SkD"/>
                <constraint firstAttribute="trailing" secondItem="BBY-FA-gv6" secondAttribute="trailing" constant="10" id="NJa-CY-UXG"/>
                <constraint firstItem="g0Q-WE-r86" firstAttribute="top" secondItem="BBY-FA-gv6" secondAttribute="bottom" constant="51" id="OIw-Mn-14l"/>
                <constraint firstAttribute="trailing" secondItem="f8P-00-J9k" secondAttribute="trailing" constant="10" id="PwP-pl-966"/>
                <constraint firstItem="z60-5J-c7c" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="QL4-ms-sXv"/>
                <constraint firstItem="8FC-Co-Bm4" firstAttribute="top" secondItem="U7x-YZ-K1j" secondAttribute="bottom" constant="10" id="SGg-53-O84"/>
                <constraint firstAttribute="trailing" secondItem="g0Q-WE-r86" secondAttribute="trailing" constant="10" id="UJ7-Fj-HHg"/>
                <constraint firstItem="U7x-YZ-K1j" firstAttribute="top" secondItem="BBY-FA-gv6" secondAttribute="bottom" constant="9" id="Vy5-z0-IOE"/>
                <constraint firstItem="f8P-00-J9k" firstAttribute="leading" secondItem="8FC-Co-Bm4" secondAttribute="trailing" constant="10" id="Wwf-jH-N0y"/>
                <constraint firstAttribute="trailing" secondItem="ECy-px-V07" secondAttribute="trailing" constant="10" id="eiF-tD-XTz"/>
                <constraint firstItem="f8P-00-J9k" firstAttribute="top" secondItem="g0Q-WE-r86" secondAttribute="bottom" constant="10" id="hrV-He-6m6"/>
                <constraint firstItem="z60-5J-c7c" firstAttribute="top" secondItem="ECy-px-V07" secondAttribute="bottom" constant="20" id="jFG-Vh-6bU"/>
                <constraint firstItem="BBY-FA-gv6" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="k8H-K7-jPE"/>
                <constraint firstItem="U7x-YZ-K1j" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="mnm-Jq-8Ol"/>
                <constraint firstAttribute="trailing" secondItem="z60-5J-c7c" secondAttribute="trailing" constant="10" id="tyQ-iq-n9Q"/>
                <constraint firstItem="f8P-00-J9k" firstAttribute="leading" secondItem="8FC-Co-Bm4" secondAttribute="trailing" constant="10" id="z5y-jy-3y2"/>
                <constraint firstItem="BBY-FA-gv6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="zHJ-3J-46x"/>
                <constraint firstItem="f8P-00-J9k" firstAttribute="leading" secondItem="8FC-Co-Bm4" secondAttribute="trailing" constant="10" id="zpA-CP-3w4"/>
            </constraints>
            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
            <variation key="default">
                <mask key="constraints">
                    <exclude reference="HiK-uI-Nlf"/>
                    <exclude reference="OIw-Mn-14l"/>
                    <exclude reference="Wwf-jH-N0y"/>
                    <exclude reference="zpA-CP-3w4"/>
                </mask>
            </variation>
        </view>
    </objects>
    <resources>
        <image name="tabbar_home_normal" width="24" height="24"/>
    </resources>
</document>
